--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "apexcharts": "^4.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.16.0",
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
     "react-apexcharts": "^1.7.0",
